# ai-evaluation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
python/: README.md  pyproject.toml
python/docker/celery/: Dockerfile  docker-compose.yml
python/docker/feedback/: docker-compose.yml
python/docker/kubernetes/: Dockerfile  README.md
python/docker/ray/: docker-compose.yml
python/docker/temporal/: Dockerfile  docker-compose.yml
python/docs/: README.md
python/examples/: 01_local_metrics.py  02_llm_as_judge.py  03_rag_evaluation.py  04_guardrails.py  05_protect.py  05_streaming.py  06_autoeval.py  07_otel_tracing.py  09_code_security.py  09_multimodal_judge.py  09_phase1_metrics.py  10_distributed_backends.py  10_rag_and_structured.py  README.md  config-with-assertions.yaml  feedback_loop_demo.py  guardrails_modal_gateway.py  guardrails_scanners.py  otel_tracing.py
python/examples/ci-cd/: README.md  example-config.yaml
python/fi/: __init__.py
python/fi/api/: __init__.py  auth.py  types.py
python/fi/cli/: __init__.py  main.py
python/fi/cli/assertions/: __init__.py  conditions.py  evaluator.py  exit_codes.py  parser.py  reporter.py
python/fi/cli/commands/: __init__.py  config.py  export.py  init.py  list_cmd.py  run.py  validate.py  view.py
python/fi/cli/config/: __init__.py  defaults.py  loader.py  schema.py
python/fi/cli/output/: __init__.py  formatters.py  reporters.py
python/fi/cli/storage/: __init__.py  run_history.py
python/fi/cli/utils/: __init__.py  (+1 more)
python/fi/evals/: __init__.py  evaluator.py  execution.py  manager.py  manager_types.py  protect.py  templates.py  types.py
python/fi/utils/: __init__.py  constants.py  errors.py  executor.py  routes.py  utils.py
python/scripts/: setup_integration_test.py
python/tests/: __init__.py
python/tests/cli/: conftest.py  test_assertions.py  test_assertions_integration.py  test_config_loader.py  test_e2e.py  test_export.py  test_init.py  test_list.py  test_run.py  test_validate.py  test_view.py
python/tests/contract/: conftest.py  test_input_mapping.py  test_pipeline_shape.py  test_registry_drift.py  test_response_parsing.py  test_routes_enum.py  test_silent_empty.py
python/tests/integration/: __init__.py  conftest.py  test_evals_revamp.py  test_evaluator_integration.py  test_guardrails_integration.py  test_guardrails_modal_gateway.py
python/tests/release/: conftest.py  test_full_matrix.py  test_real_scenarios.py
python/tests/sdk/: __init__.py  conftest.py  test_agents.py  test_code_security.py  test_e2e_real_world.py  test_evaluator.py  test_function_calling.py  test_guardrails_backends.py  test_guardrails_e2e.py  test_guardrails_models.py  test_guardrails_scanners.py  test_guardrails_unit.py  test_hallucination.py  test_heuristics.py  test_otel.py  test_structured_output.py  test_templates.py  test_types.py
(+399 files in other folders)
