[tool.poetry]
name = "ai-evaluation"
version = "0.2.1"
description = "We help GenAI teams maintain high-accuracy for their Models in production."
authors = ["Future AGI <no-reply@futureagi.com>"]
readme = "README.md"
packages = [
    { include = "fi" }
]


[tool.poetry.dependencies]
python = ">=3.10, <3.14"
futureagi = ">=0.6.7"
jsonschema = "^4.25.1"
requests = "^2.32.5"
litellm = "^1.77.4"
openai = "^1.109.1"
typer = ">=0.9.0,<1.0.0"
rich = ">=13.0.0"
pyyaml = ">=6.0"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"
opentelemetry-api = "^1.39.1"

[tool.poetry.scripts]
fi = "fi.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
transformers = "^5.2.0"
sentence-transformers = "^5.2.3"
torch = "^2.10.0"
fi-instrumentation-otel = "^0.1.16"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:Field name.*shadows an attribute:UserWarning",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
