[project]
name = "ai-evaluation"
version = "1.0.1"
description = "We help GenAI teams maintain high-accuracy for their Models in production."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{name = "Future AGI", email = "no-reply@futureagi.com"}]

dependencies = [
    "futureagi>=0.6.7",
    "jsonschema>=4.25.1,<5",
    "requests>=2.32.5,<3",
    "litellm>=1.77.4,<2",
    "openai>=1.109.1,<2",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "opentelemetry-sdk>=1.39.1,<2",
    "opentelemetry-exporter-otlp>=1.39.1,<2",
    "opentelemetry-api>=1.39.1,<2",
]

[project.optional-dependencies]
nli = ["transformers>=5.2.0,<6", "torch>=2.10.0,<3"]
embeddings = ["sentence-transformers>=5.2.3,<6"]
feedback = ["chromadb>=0.4.0"]
temporal = ["temporalio>=1.7.0"]
celery = ["celery>=5.3.0", "redis>=5.0.0"]
ray = ["ray>=2.0.0"]
all = [
    "transformers>=5.2.0,<6",
    "torch>=2.10.0,<3",
    "sentence-transformers>=5.2.3,<6",
    "chromadb>=0.4.0",
    "temporalio>=1.7.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "ray>=2.0.0",
]

[project.scripts]
fi = "fi.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "transformers>=5.2.0,<6",
    "sentence-transformers>=5.2.3,<6",
    "torch>=2.10.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:Field name.*shadows an attribute:UserWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fi"]
